--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  pool: 5
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -83,3 +84,4 @@ production:
   database: todo_app_production
   username: todo_app
   password: <%= ENV['TODO_APP_DATABASE_PASSWORD'] %>
+  host: <%= ENV['DATABASE_HOST'] %>
